# logic_for_economists

./: .gitignore  README.md  basic_laws.ipynb  functions.ipynb  pyproject.toml  week2.ipynb  week3.ipynb
